--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,9 @@
 {
   "name": "wrabler-server",
   "version": "1.0.0",
+  "engines": {
+    "node": "8.11.x"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
